--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "highcharts": "^10.3.2",
+    "highcharts-react-official": "^3.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
